==> xiangxud/LCD-Dispaly-and-TCP-Client/BSP/ethernetif.c <==
#include "stm32f4xx_hal.h"
#include "lwip/opt.h"
#include "lwip/timeouts.h"
#include "lwip/netif.h"
#include "netif/ethernet.h"
#include "netif/etharp.h"
#include "lwip/ethip6.h"
#include "ethernetif.h"
#include "sys_PPriority.h"
#include <string.h>
#include "cmsis_os.h"
#define   DeviceID1   (*(__IO uint32_t *)(0x1FFF7A10))
#define TIME_WAITING_FOR_INPUT ( portMAX_DELAY )
#define INTERFACE_THREAD_STACK_SIZE ( 350 )
#define IFNAME0 's'
#define IFNAME1 't'
#define ETH_RMII_MDC_Pin             GPIO_PIN_1
#define ETH_RMII_MDC_GPIO_Port       GPIOC
#define ETH_RMII_CLK_Pin             GPIO_PIN_1
#define ETH_RMII_CLK_GPIO_Port       GPIOA
#define ETH_RMII_MDIO_Pin            GPIO_PIN_2
#define ETH_RMII_MDIO_GPIO_Port      GPIOA
#define ETH_RMII_CRS_Pin             GPIO_PIN_7
#define ETH_RMII_CRS_GPIO_Port       GPIOA
#define ETH_RMII_RXD0_Pin            GPIO_PIN_4
#define ETH_RMII_RXD0_GPIO_Port      GPIOC
#define ETH_RMII_RXD1_Pin            GPIO_PIN_5
#define ETH_RMII_RXD1_GPIO_Port      GPIOC
#define ETH_RMII_TXEN_Pin            GPIO_PIN_11
#define ETH_RMII_TXEN_GPIO_Port      GPIOB
#define ETH_RMII_TXD0_Pin            GPIO_PIN_12
#define ETH_RMII_TXD0_GPIO_Port      GPIOB
#define ETH_RMII_TXD1_Pin            GPIO_PIN_13
#define ETH_RMII_TXD1_GPIO_Port      GPIOB
#define ETH_PHY_RST_Pin              GPIO_PIN_0
#define ETH_PHY_RST_GPIO_Port        GPIOA
#define PHY_RST_Enable()             HAL_GPIO_WritePin(ETH_PHY_RST_GPIO_Port, ETH_PHY_RST_Pin, GPIO_PIN_RESET);

void HAL_ETH_MspInit(ETH_HandleTypeDef* ethHandle)
{
  GPIO_InitTypeDef GPIO_InitStruct;
  if(ethHandle->Instance==ETH)
  {
    /* Enable Peripheral clock */
    __HAL_RCC_ETH_CLK_ENABLE();
  
    /**ETH GPIO Configuration    
    PC1     ------> ETH_MDC
    PA1     ------> ETH_REF_CLK
    PA2     ------> ETH_MDIO
    PA7     ------> ETH_CRS_DV
    PC4     ------> ETH_RXD0
    PC5     ------> ETH_RXD1
    PB11     ------> ETH_TX_EN
    PB12     ------> ETH_TXD0
    PB13     ------> ETH_TXD1 
    */
		
		GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF11_ETH;
		
    GPIO_InitStruct.Pin = ETH_RMII_MDC_Pin;
    HAL_GPIO_Init(ETH_RMII_MDC_GPIO_Port, &GPIO_InitStruct);
		
		GPIO_InitStruct.Pin = ETH_RMII_RXD0_Pin;
    HAL_GPIO_Init(ETH_RMII_RXD0_GPIO_Port, &GPIO_InitStruct);
		
		GPIO_InitStruct.Pin = ETH_RMII_RXD1_Pin;
    HAL_GPIO_Init(ETH_RMII_RXD1_GPIO_Port, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = ETH_RMII_CLK_Pin;
    HAL_GPIO_Init(ETH_RMII_CLK_GPIO_Port, &GPIO_InitStruct);
		
		GPIO_InitStruct.Pin = ETH_RMII_MDIO_Pin;
    HAL_GPIO_Init(ETH_RMII_MDIO_GPIO_Port, &GPIO_InitStruct);
		
		GPIO_InitStruct.Pin = ETH_RMII_CRS_Pin;
    HAL_GPIO_Init(ETH_RMII_CRS_GPIO_Port, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = ETH_RMII_TXEN_Pin;
    HAL_GPIO_Init(ETH_RMII_TXEN_GPIO_Port, &GPIO_InitStruct);
		
		GPIO_InitStruct.Pin = ETH_RMII_TXD0_Pin;
    HAL_GPIO_Init(ETH_RMII_TXD0_GPIO_Port, &GPIO_InitStruct);
		
		GPIO_InitStruct.Pin = ETH_RMII_TXD1_Pin;
    HAL_GPIO_Init(ETH_RMII_TXD1_GPIO_Port, &GPIO_InitStruct);		
		
		/* LAN8720硬件复位 */
		GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_PULLUP;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
		
    GPIO_InitStruct.Pin = ETH_PHY_RST_Pin;
    HAL_GPIO_Init(ETH_PHY_RST_GPIO_Port, &GPIO_InitStruct);
		
		PHY_RST_Enable();
		HAL_Delay(50);
		PHY_RST_Disable();		
  }
}

void HAL_ETH_MspDeInit(ETH_HandleTypeDef* ethHandle)
{
  if(ethHandle->Instance==ETH)
  {
  /* USER CODE BEGIN ETH_MspDeInit 0 */

  /* USER CODE END ETH_MspDeInit 0 */
    /* Peripheral clock disable */
    __HAL_RCC_ETH_CLK_DISABLE();
  
    /**ETH GPIO Configuration    
    PC1     ------> ETH_MDC
    PA1     ------> ETH_REF_CLK
    PA2     ------> ETH_MDIO
    PA7     ------> ETH_CRS_DV
    PC4     ------> ETH_RXD0
    PC5     ------> ETH_RXD1
    PB11     ------> ETH_TX_EN
    PB12     ------> ETH_TXD0
    PB13     ------> ETH_TXD1 
    */
    HAL_GPIO_DeInit(GPIOC, ETH_RMII_MDC_Pin|ETH_RMII_RXD0_Pin|ETH_RMII_RXD1_Pin);

    HAL_GPIO_DeInit(GPIOA, ETH_RMII_CLK_Pin|ETH_RMII_MDIO_Pin|ETH_RMII_CRS_Pin);

    HAL_GPIO_DeInit(GPIOB, ETH_RMII_TXEN_Pin|ETH_RMII_TXD0_Pin|ETH_RMII_TXD1_Pin);
  }
}

void low_level_init(struct netif *netif)
{ 
  
/* Init ETH */
  uint8_t MACAddr[6];
	
	/* MAC地址设置(高三字节固定为:2.0.0,低三字节用STM32唯一ID)
	   MAC地址的最高字节的LSB位为0代表是单播地址，为1是组播地址 */
	MACAddr[0] = 2; //高三字节(IEEE称之为组织唯一ID,OUI)地址固定为:2.0.0
	MACAddr[1] = 0;
	MACAddr[2] = 0;
	MACAddr[3] = (DeviceID1 >> 16) & 0xFF;
	MACAddr[4] = (DeviceID1 >> 8) & 0xFF;
	MACAddr[5] = DeviceID1 & 0xFF;
	
  heth.Instance = ETH;
	heth.Init.MACAddr = MACAddr;
  heth.Init.AutoNegotiation = ETH_AUTONEGOTIATION_ENABLE;
	heth.Init.Speed = ETH_SPEED_100M;
	heth.Init.DuplexMode = ETH_MODE_FULLDUPLEX;
	heth.Init.MediaInterface = ETH_MEDIA_INTERFACE_RMII;  
  heth.Init.RxMode = ETH_RXINTERRUPT_MODE;
  heth.Init.ChecksumMode = ETH_CHECKSUM_BY_HARDWARE;
	heth.Init.PhyAddress = LAN8720A_PHY_ADDRESS;
  
  if (HAL_ETH_Init(&heth) == HAL_OK)
  {
    /* Set netif link flag */  
    netif->flags |= NETIF_FLAG_LINK_UP;
  }
  /* Initialize Tx Descriptors list: Chain Mode */
  HAL_ETH_DMATxDescListInit(&heth, DMATxDscrTab, &Tx_Buff[0][0], ETH_TXBUFNB);
     
  /* Initialize Rx Descriptors list: Chain Mode  */
  HAL_ETH_DMARxDescListInit(&heth, DMARxDscrTab, &Rx_Buff[0][0], ETH_RXBUFNB);
 
#if LWIP_ARP || LWIP_ETHERNET 

  /* set MAC hardware address length */
  netif->hwaddr_len = ETHARP_HWADDR_LEN;
  
  /* set MAC hardware address */
  netif->hwaddr[0] =  heth.Init.MACAddr[0];
  netif->hwaddr[1] =  heth.Init.MACAddr[1];
  netif->hwaddr[2] =  heth.Init.MACAddr[2];
  netif->hwaddr[3] =  heth.Init.MACAddr[3];
  netif->hwaddr[4] =  heth.Init.MACAddr[4];
  netif->hwaddr[5] =  heth.Init.MACAddr[5];
  
  /* maximum transfer unit */
  netif->mtu = 1500;
  
  /* Accept broadcast address and ARP traffic */
  /* don't set NETIF_FLAG_ETHARP if this device is not an ethernet one */
  #if LWIP_ARP
    netif->flags |= NETIF_FLAG_BROADCAST | NETIF_FLAG_ETHARP;
  #else 
    netif->flags |= NETIF_FLAG_BROADCAST;
  #endif /* LWIP_ARP */
  
  /* Enable MAC and DMA transmission and reception */
  HAL_ETH_Start(&heth);
#endif /* LWIP_ARP || LWIP_ETHERNET */
}

void ethernetif_input( struct netif *netif ) 
{
  err_t err;
  struct pbuf *p;
  
  /* move received packet into a new pbuf */
  p = low_level_input(netif);
    
  /* no packet could be read, silently ignore this */
  if (p == NULL) return;
    
  /* entry point to the LwIP stack */
  err = netif->input(p, netif);
    
  if (err != ERR_OK)
  {
    LWIP_DEBUGF(NETIF_DEBUG, ("ethernetif_input: IP input error\n"));
    pbuf_free(p);
    p = NULL;
  }
}
